--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 # Profile information
 name: deverie
-title: deverie - Free Jekyll Theme
+title: deverie's blog
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "artemsheludko.pw" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social
 facebook: #Add your Facebook
 twitter: #Add your Twitter
 google-plus: #Add your Google+
-github: #Add your Github
+github: https://github.com/deverie
 
 # Contact form
-email: #your-email@domain.com
+email: deverie92@gmail.com
 
 # Comments
 discus-identifier: # Add your Disqus identifier
