--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: "artemsheludko.pw" # the base hostname & protocol for your site, e.g. http:
 facebook: #Add your Facebook
 twitter: #Add your Twitter
 google-plus: #Add your Google+
-github: https://github.com/deverie
+github: deverie
 
 # Contact form
 email: deverie92@gmail.com
